engine/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_end_hook_activity_without_message.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before reveal:\\n{hidden}\\nrunning:\\n{running}\\ncompleted:\\n{}\",\nhook_status_frame(&chat, 80),)"
---
before reveal:
"                                                                                "
"                                                                                "
"› Ask Hexa to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
running:
"                                                                                "
"• Running hook                                                                  "
"                                                                                "
"                                                                                "
"› Ask Hexa to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
completed:
"                                                                                "
"                                                                                "
"› Ask Hexa to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
